<resources>
    <string name="app_name">Commander</string>
    <string name="title_connect">Connect</string>
    <string name="title_control">Control</string>
    <string name="ip_address_hint">Ip adress</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="connect_button">Connect</string>
    <string name="connected_message">Connected!</string>
    <string name="disconnect_button_name"><u>Disconnect</u></string>
    <string name="remember_credentials_hint">Remember Credentials</string>
    <string name="zoom_speed_hint">Zoom speed</string>
    <string name="tilt_speed_hint">Tilt speed</string>
    <string name="pan_speed_hint">Pan speed</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>