<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.Commander.FullscreenContainer"
    tools:context=".ui.FullscreenActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        app:use_controller="false"
        android:backgroundTint="@color/black"
        android:id="@+id/videoPlayer"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.dylanmissuwe.commander.ControlButton
            android:id="@+id/button_exit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#50000000"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_left_solid_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/sliders"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/pan_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pan_speed_hint" />

            <SeekBar
                android:id="@+id/pan_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="24"
                android:min="1"
                android:progress="12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tilt_speed_hint" />

            <SeekBar
                android:id="@+id/tilt_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:min="1"
                android:progress="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/zoom_speed_hint" />

            <SeekBar
                android:id="@+id/zoom_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:max="7"
                android:min="1"
                android:progress="4" />
        </LinearLayout>

        <GridLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom|center_horizontal"
            android:alpha="0.5"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UselessParent">

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_off"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_power_off_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_up"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_700"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_up_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_mute"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:backgroundTint="@android:color/holo_orange_light"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_video_slash_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_700"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_left_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_home"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_200"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_home_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_700"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_right_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_zoom_in"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/light_blue_400"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search_plus_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_down"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_700"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_down_solid" />

            <com.dylanmissuwe.commander.ControlButton
                android:id="@+id/button_zoom_out"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/light_blue_400"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search_minus_solid" />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>